--- a/style.css
+++ b/style.css
@@ -9,4 +9,18 @@ body {
 }
 .title {
 	font-size: 50px;
+	text-decoration: underline;
+}
+#update_log {
+	width: 100%;
+	height: 100%;
+	background-color: #DDCC99;
+	border: 2px solid black;
+}
+.menu {
+	font-size: 25px;
+	position: relative;
+	bottom: 0;
+	color: black;
+	text-decoration: none;
 }
