--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: #DDCC99;
-	border: 2px solid black;
+	border: 5px solid black;
 }
 .menu {
 	font-size: 25px;
@@ -27,4 +27,20 @@ body {
 .td_border {
 	border: 1px solid black;
 	text-align: center;
+}
+#furnace_visibility {
+	display: none;
+}
+
+div.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 4px double black;
+    border-top: none;
 }
