--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-	background-color: #EEDDAA;
+	background-image: url("background.jpg");
+	background-color: #EEDDAA
 }
 #menu {
-	background-color: #DDCC99;
+	background-image: url("menu_background.jpg");
 	height: 50%;
 	width: 100%;
 	border: 1px solid black;
@@ -12,6 +13,7 @@ body {
 	text-decoration: underline;
 }
 #update_log {
+	background-image: url("background.jpg");
 	width: 100%;
 	height: 100%;
 	background-color: #DDCC99;
@@ -25,8 +27,7 @@ body {
 	text-decoration: none;
 }
 .td_border {
-	border: 1px solid black;
-	text-align: center;
+	border: none !important;
 }
 #furnace_visibility {
 	display: none;
@@ -47,4 +48,20 @@ div.tab {
 
 .hide {
 	display: none;
+}
+table {
+	border: 1px solid black;
+	text-align: center;
+}
+tr {
+	border: 1px solid black;
+	text-align: center;
+}
+th {
+	border: 1px solid black;
+	text-align: center;
+}
+td {
+	border: 1px solid black;
+	text-align: center;
 }
